[package]
name = "chuni-c2c-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.5"
chrono = "0.4"
cipher = "0.4"
clap = { version = "4.5", features = ["derive"] }
cli-table = { version = "0.4", default-features = false, features = ["derive"] }
enable-ansi-support = "0.2"
etherparse = "0.17"
faster-hex = { version = "0.10", default-features = false, features = ["std"] }
ipnetwork = "0.21"
num_enum = "0.7"
pcap = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
